# lexi

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  environment.yml  netlify.toml  pyproject.toml
backend/: Dockerfile  Makefile  README.md  __init__.py  alembic.ini  celery_app.py  config.py  database.py  logging_config.py  main.py  models.py  requirements.txt  schemas.py  security.py
backend/alembic/: env.py
backend/ml/: __init__.py
backend/ml/llm/: qa.py  (+4 more)
backend/services/: classification_service.py  clause_service.py  consent_service.py  extraction_service.py  job_service.py  metadata_service.py  rag_service.py  results_service.py  risk_service.py  storage_service.py  summary_service.py  upload_service.py
backend/tasks/: processing.py
backend/tests/: test_api.py  test_auth_provider.py  test_risk_service.py  test_summary_service.py
backend/utils/: __init__.py
docs/: .gitkeep  README.md
docs/product/: roadmap.md  styles.md  tone.md  user-testing.md  vision.md
docs/technical/: CHANGELOG.md  SETUP.md  contract.md  design.md  requirements.md  tasks.md
frontend/: .gitignore  README.md  components.json  next.config.mjs  package-lock.json  package.json  playwright.config.js
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.jsx  page.jsx  template.jsx
frontend/tests/: bug-condition-exploration.test.js  lease-verification-flow.test.js  live-stack-teardown.js
scripts/: README.md
scripts/onboarding/: check-health.sh  setup-dev.sh  start-dev.sh  validate-setup.py
scripts/testing/: live_api_server.py
(+67 files in other folders)
