[tool.poetry]
name = "lexi"
version = "0.1.0"
description = "Legal understanding engine that turns dense legal documents into clear, plain-English explanations"
authors = ["Lexi Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.6"
boto3 = "^1.34.34"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pypdf = "^4.0.1"
pdfminer-six = "^20231228"
python-docx = "^1.1.0"
pytesseract = "^0.3.10"
pillow = "^10.2.0"
pdf2image = "^1.17.0"
transformers = "^4.37.2"
torch = "^2.2.0"
spacy = "^3.7.2"
python-dateutil = "^2.8.2"
cryptography = "^42.0.2"
python-magic = "^0.4.27"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
qdrant-client = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
